--- a/gb/nsc413.md
+++ b/gb/nsc413.md
@@ -9,6 +9,7 @@
 <a href="https://github.com/ukize233/djy/blob/master/gb/20/1/4/n11767049.md#1">伊朗二号人物索莱马尼被击毙 他是什么人？</a><br>
 <a href="https://github.com/ukize233/djy/blob/master/gb/20/1/3/n11766230.md#1">杭州政府要求全民储粮 被指转嫁粮食危机</a><br>
 <br><p><a href="https://github.com/ukize233/djy/blob/master/gb/nscrw413.md#1">更多......</a></p><hr><h2><p><strong>今日评论</strong></p></h2>
+<a href="https://github.com/ukize233/djy/blob/master/gb/20/1/10/n11782397.md#1">张林：被中共当成牲口奴役的中国人</a><br>
 <a href="https://github.com/ukize233/djy/blob/master/gb/20/1/10/n11782100.md#1">乾元：从广州地陷看中共城市管理体制</a><br>
 <a href="https://github.com/ukize233/djy/blob/master/gb/20/1/10/n11781689.md#1">【名家专栏】对英国工党败选的思考</a><br>
 <a href="https://github.com/ukize233/djy/blob/master/gb/20/1/10/n11781626.md#1">石铭：中共迫害无辜老人 丧尽天良</a><br>
@@ -21,7 +22,6 @@
 <a href="https://github.com/ukize233/djy/blob/master/gb/20/1/8/n11778044.md#1">【名家专栏】FBI应为滥用外国情报监视法负责</a><br>
 <a href="https://github.com/ukize233/djy/blob/master/gb/20/1/9/n11779125.md#1">朱同：没有暴徒，只有暴政</a><br>
 <a href="https://github.com/ukize233/djy/blob/master/gb/20/1/9/n11778817.md#1">港人心声：不想看到宝岛成为第二个香港</a><br>
-<a href="https://github.com/ukize233/djy/blob/master/gb/19/12/22/n11738121.md#1">【思想领袖】戴耀廷：香港抗议者的智慧（上）</a><br>
 <br><p><a href="https://github.com/ukize233/djy/blob/master/gb/news392.md#1">更多......</a></p><hr><h2><p><strong>独家视角</strong></p></h2>
 <a href="https://github.com/ukize233/djy/blob/master/gb/19/12/5/n11701493.md#1">【思想领袖】中共内部承认正走向解体（一）</a><br>
 <a href="https://github.com/ukize233/djy/blob/master/gb/19/12/23/n11739570.md#1">【2019盘点】时代变革 川普的九记重锤</a><br>
@@ -30,18 +30,18 @@
 <a href="https://github.com/ukize233/djy/blob/master/gb/19/12/29/n11752526.md#1">【2019盘点】中共在香港问题的十大谎言</a><br>
 <br><p><a href="https://github.com/ukize233/djy/blob/master/gb/nf6092.md#1">更多......</a></p>
 </td><td VALIGN=TOP width="352">
-<a href="https://github.com/ukize233/djy/blob/master/gb/20/1/10/n11782117.md#1">“一众港铁员工”发公开信：与香港人同行</a><br>
+<a href="https://github.com/ukize233/djy/blob/master/gb/20/1/10/n11782236.md#1">返乡潮首日大陆无防护 武汉火车站零防疫</a><br>
 <a href="https://github.com/ukize233/djy/blob/master/gb/20/1/10/n11781279.md#1">【翻墙必看】中南海官员透露中共高层秘密</a><br>
+<a href="https://github.com/ukize233/djy/blob/master/gb/20/1/10/n11782117.md#1">“一众港铁员工”发公开信：与香港人同行</a><br>
 <a href="https://github.com/ukize233/djy/blob/master/gb/20/1/10/n11782176.md#1">受贿超1.2亿 中共质检总局前高官魏传忠受审</a><br>
 <a href="https://github.com/ukize233/djy/blob/master/gb/20/1/10/n11781408.md#1">【独家】专访郑文杰: 被虐待至精神崩溃（三）</a><br>
+<a href="https://github.com/ukize233/djy/blob/master/gb/20/1/10/n11781010.md#1">【拍案惊奇】伊朗导弹是元凶 德黑兰坠机记实</a><br>
 <a href="https://github.com/ukize233/djy/blob/master/gb/20/1/10/n11781943.md#1">四川“美女市长”江建君贪腐细节曝光</a><br>
 <a href="https://github.com/ukize233/djy/blob/master/gb/20/1/10/n11781462.md#1">电影《中国女排》引争议 前主教练要求删镜头</a><br>
-<a href="https://github.com/ukize233/djy/blob/master/gb/20/1/10/n11781010.md#1">【拍案惊奇】伊朗导弹是元凶 德黑兰坠机记实</a><br>
 <a href="https://github.com/ukize233/djy/blob/master/gb/20/1/10/n11781366.md#1">受贿额巨大 吉林女厅官翟宪枝获刑20年</a><br>
 <a href="https://github.com/ukize233/djy/blob/master/gb/20/1/10/n11781301.md#1">【专访】台立委王定宇：王立强案新内幕（上）</a><br>
 <a href="https://github.com/ukize233/djy/blob/master/gb/20/1/10/n11781257.md#1">分析：王志民任新职 未必安全着陆</a><br>
 <a href="https://github.com/ukize233/djy/blob/master/gb/20/1/10/n11781258.md#1">亲属遭中共骚扰 郑文杰宣布与家属断绝关系</a><br>
-<a href="https://github.com/ukize233/djy/blob/master/gb/20/1/10/n11780977.md#1">视频：乌航客机疑被伊朗导弹击中瞬间</a><br>
 <a href="https://github.com/ukize233/djy/blob/master/gb/20/1/10/n11781995.md#1">400公里1312元 大陆高速收天价过路费</a><br>
 <a href="https://github.com/ukize233/djy/blob/master/gb/20/1/10/n11782135.md#1">香港人在台北举标语 呼吁民众投票守护台湾</a><br>
 <a href="https://github.com/ukize233/djy/blob/master/gb/20/1/9/n11780208.md#1">《假孔子之名》导演：盼台湾壮大助中国人</a><br>
@@ -53,6 +53,7 @@
 <a href="https://github.com/ukize233/djy/blob/master/gb/20/1/10/n11781369.md#1">3岁大陆男童到港暂住亲友家 昏迷送院不治</a><br>
 <a href="https://github.com/ukize233/djy/blob/master/gb/20/1/9/n11780313.md#1">重庆访民险遭绑架 同伴三人被警方带走</a><br>
 <a href="https://github.com/ukize233/djy/blob/master/gb/20/1/10/n11781156.md#1">一晚做8套试题 湖南小学生出现精神异常</a><br>
+<a href="https://github.com/ukize233/djy/blob/master/gb/20/1/10/n11780977.md#1">视频：乌航客机疑被伊朗导弹击中瞬间</a><br>
 <a href="https://github.com/ukize233/djy/blob/master/gb/20/1/9/n11780767.md#1">黄耀明悼念大卫?鲍伊 宣布达明一派3月开唱</a><br>
 <a href="https://github.com/ukize233/djy/blob/master/gb/20/1/9/n11780832.md#1">假货太多 大陆现“山寨手机品牌排行榜”</a><br>
 <a href="https://github.com/ukize233/djy/blob/master/gb/20/1/9/n11780860.md#1">辽宁公安厅官落马 曾被举报当涉黑保护伞</a><br>
@@ -87,13 +88,12 @@
 <a href="https://github.com/ukize233/djy/blob/master/gb/20/1/9/n11779070.md#1">黑龙江前市委书记曾畏罪潜逃 逃跑路线曝光</a><br>
 <a href="https://github.com/ukize233/djy/blob/master/gb/20/1/9/n11779313.md#1">中国主要城市写字楼空置率惊人 近乎鬼城</a><br>
 <a href="https://github.com/ukize233/djy/blob/master/gb/20/1/9/n11778504.md#1">【拍案惊奇】危机未完全解除 美伊冲突内幕</a><br>
-<a href="https://github.com/ukize233/djy/blob/master/gb/20/1/9/n11779091.md#1">北大医学部教授：武汉肺炎人传人可能性大</a><br>
 <br><p><a href="https://github.com/ukize233/djy/blob/master/gb/nsc413_2.md#1">更多......</a></p></td><td VALIGN=TOP rowspan=6 width="156" align="middle"><a href="https://git.io/fj9l0" target="_blank"><img width="130" src="https://raw.githubusercontent.com/ukize233/www/master/t/djy/gudianwu.jpg" title="神韵古典舞技巧表演" alt="神韵古典舞技巧表演"><br>神韵古典舞表演</a><br><a href="https://git.io/fj9la" target="_blank"><img width="130" src="https://raw.githubusercontent.com/ukize233/www/master/t/djy/9ping.jpg" title="九评共产党" alt="九评共产党"><br>九评共产党</a><br><a href="https://git.io/fj9lr" target="_blank"><img width="130" src="https://raw.githubusercontent.com/ukize233/www/master/t/djy/communism.jpg" title="共产主义终极目的" alt="共产主义终极目的"><br>共产主义终极目的</a><br><a href="https://git.io/fjFNJ" target="_blank"><img width="130" src="https://raw.githubusercontent.com/ukize233/www/master/t/djy/weihuo.jpg" title="中共的伪火骗局"" alt="中共的伪火骗局""><br>中共的伪火骗局"</a><br><a href="https://git.io/fj9lK" target="_blank"><img width="130" src="https://raw.githubusercontent.com/ukize233/www/master/t/djy/changzhi.jpg" title="古今奇观-藏字石" alt="古今奇观-藏字石"><br>古今奇观-藏字石</a><br><a href="https://git.io/fj9lP" target="_blank"><img width="130" src="https://raw.githubusercontent.com/ukize233/www/master/t/djy/tianan.jpg" title="通往天安门的旅程" alt="通往天安门的旅程"><br>通往天安门的旅程</a><br><a href="https://git.io/fj9lX" target="_blank"><img width="130" src="https://raw.githubusercontent.com/ukize233/www/master/t/djy/weilai.jpg" title="未来人的神话" alt="未来人的神话"><br>未来人的神话故事</a><br><a href="https://git.io/fj9l1" target="_blank"><img width="130" src="https://raw.githubusercontent.com/ukize233/www/master/t/djy/ji-zy.jpg" title="中共罪恶的活摘" alt="中共罪恶的活摘"><br>中共罪恶的活摘</a><br><a href="https://git.io/fj9lM" target="_blank"><img width="130" src="https://raw.githubusercontent.com/ukize233/www/master/t/djy/huozhai.jpg" title="铁证如山" alt="铁证如山"><br>铁证如山</a><br><a href="https://git.io/fj9lD" target="_blank"><img width="130" src="https://raw.githubusercontent.com/ukize233/www/master/t/djy/4ke.jpg" title="一家四口死于中共暴政" alt="一家四口死于中共暴政"><br>一家四口死于暴政</a><br><a href="https://git.io/fj9ly" target="_blank"><img width="130" src="https://raw.githubusercontent.com/ukize233/www/master/t/djy/jie-di.jpg" title="─弟妹相继死于中共迫害" alt="─弟妹相继死于中共迫害"><br>弟妹相继死于迫害</a><br><a href="https://git.io/fj9lS" target="_blank"><img width="130" src="https://raw.githubusercontent.com/ukize233/www/master/t/djy/ma-sj.jpg" title="她们许多已经被中共迫害至死" alt="她们许多已经被中共迫害至死"><br>她们被中共迫害死</a><br><a href="https://git.io/fj9l9" target="_blank"><img width="130" src="https://raw.githubusercontent.com/ukize233/www/master/t/djy/shuan-cxl.jpg" title="双城血泪" alt="双城血泪"><br>双城血泪</a><br><a href="https://git.io/fj9lH" target="_blank"><img width="130" src="https://raw.githubusercontent.com/ukize233/www/master/t/djy/wu-zbh.jpg" title="震撼人心的无罪辩护" alt="震撼人心的无罪辩护"><br>无罪辩护震撼人心</a><br><a href="https://git.io/fj9lQ" target="_blank"><img width="130" src="https://raw.githubusercontent.com/ukize233/www/master/t/djy/6c10-720.jpg" title="从610到720" alt="从610到720"><br>从610到720</a><br><a href="https://git.io/fj9l7" target="_blank"><img width="130" src="https://raw.githubusercontent.com/ukize233/www/master/t/djy/xian-z.jpg" title="中共官员的选择" alt="中共官员的选择"><br>中共官员的选择</a><br><a href="https://git.io/fj9l5" target="_blank"><img width="130" src="https://raw.githubusercontent.com/ukize233/www/master/t/djy/1400l.jpg" title="剖析1400例" alt="剖析1400例"><br>剖析1400例</a><br><a href="https://git.io/fj9lb" target="_blank"><img width="130" src="https://raw.githubusercontent.com/ukize233/www/master/t/djy/425.jpg" title="万人上访真相" alt="万人上访真相"><br>万人上访真相</a><br><a href="https://git.io/fj9lN" target="_blank"><img width="130" src="https://raw.githubusercontent.com/ukize233/www/master/t/djy/qing-h.jpg" title="被中共迫害的清华学子" alt="被中共迫害的清华学子"><br>被迫害的清华学子</a><br><a href="https://git.io/fj9lx" target="_blank"><img width="130" src="https://raw.githubusercontent.com/ukize233/www/master/t/djy/jian-z513.jpg" title="见证513" alt="见证513"><br>见证513</a><br><a href="https://git.io/fj9lp" target="_blank"><img width="130" src="https://raw.githubusercontent.com/ukize233/www/master/t/djy/gongfu.jpg" title="功夫 寻道" alt="功夫 寻道"><br>功夫 寻道</a><br><a href="https://git.io/fj9lh" target="_blank"><img width="130" src="https://raw.githubusercontent.com/ukize233/www/master/t/djy/guangguimian.jpg" title="歌唱家人生奇迹" alt="歌唱家人生奇迹"><br>歌唱家的人生奇迹</a><br><a href="https://git.io/fj9lj" target="_blank"><img width="130" src="https://raw.githubusercontent.com/ukize233/www/master/t/djy/ming-jjy.jpg" title="名校精英的选择" alt="名校精英的选择"><br>名校精英的选择</a><br><a href="https://git.io/fj98e" target="_blank"><img width="130" src="https://raw.githubusercontent.com/ukize233/www/master/t/djy/yin-lj.jpg" title="音乐之家的故事" alt="音乐之家的故事"><br>音乐之家的故事</a><br><a href="https://git.io/fj98v" target="_blank"><img width="130" src="https://raw.githubusercontent.com/ukize233/www/master/t/djy/ming-hsf.jpg" title="平凡中的不平凡" alt="平凡中的不平凡"><br>平凡中的不平凡</a><br><a href="https://github.com/ukize233/djy/blob/master/gb/13/9/29/n3974789.md?dfh#1" target="_blank"><img width="128" src="https://raw.githubusercontent.com/ukize233/www/master/t/130/nizhibeituolanlao.jpg" title="善良女士被投男牢"  alt="善良女士被投男牢"><br>善良女士被投男牢</a><br><a href="https://github.com/ukize233/djy/blob/master/gb/16/3/16/n4663449.md?dfh#1" target="_blank"><img width="128" src="https://raw.githubusercontent.com/ukize233/www/master/t/130/huozhai1.jpg" title="警卫目击中共活摘"  alt="警卫目击中共活摘"><br>警卫目击中共活摘</a><br><a href="https://github.com/ukize233/djy/blob/master/gb/10/11/7/n3077476.md?dfh#1" target="_blank"><img width="128" src="https://raw.githubusercontent.com/ukize233/www/master/t/130/motoumks.jpg" title="马克思的成魔之路"  alt="马克思的成魔之路"><br>马克思的成魔之路</a><br><a href="https://github.com/ukize233/djy/blob/master/gb/18/12/9/n10900044.md?dfh#1" target="_blank"><img width="128" src="https://raw.githubusercontent.com/ukize233/www/master/t/130/konggaojm.jpg" title="303万人的举报"  alt="303万人的举报"><br>303万人的举报</a><br><a href="https://github.com/ukize233/djy/blob/master/gb/8/12/18/n2367165.md?dfh#1" target="_blank"><img width="128" src="https://raw.githubusercontent.com/ukize233/www/master/t/130/lianganduibi.jpg" title="海峡两岸强烈反差"  alt="海峡两岸强烈反差"><br>海峡两岸强烈反差</a><br><a href="https://github.com/ukize233/djy/blob/master/gb/18/10/27/n10812623.md?dfh#1" target="_blank"><img width="128" src="https://raw.githubusercontent.com/ukize233/www/master/t/130/yindu.jpg" title="印度媒体报道东方"  alt="印度媒体报道东方"><br>印度媒体报道东方</a><br><a href="https://github.com/ukize233/djy/blob/master/gb/18/6/9/n10469652.md?dfh#1" target="_blank"><img width="128" src="https://raw.githubusercontent.com/ukize233/www/master/t/130/xuejiao.jpg" title="不一样的海外校园"  alt="不一样的海外校园"><br>不一样的海外校园</a><br>
-<tr><td VALIGN=TOP width="355"><h2><p><strong>中国人权</strong></p></h2><a href="https://github.com/ukize233/djy/blob/master/gb/20/1/9/n11778253.md#1"><img width="150" align ="left" src="http://i.epochtimes.com/assets/uploads/2020/01/c3ed8329bce6a00029803af8c3258562-150x120.jpg"></a><a href="https://github.com/ukize233/djy/blob/master/gb/20/1/9/n11778253.md#1">鲁商被合同诈骗 法院三次秘密判决维权无门</a><br>法律的制定是以公平正义为基础，用来 ...<br><br><a href="https://github.com/ukize233/djy/blob/master/gb/20/1/8/n11778054.md#1">饮水工程强占地 河南五农场联名举报县政府</a><br><a href="https://github.com/ukize233/djy/blob/master/gb/20/1/7/n11774971.md#1">四川八名法轮功学员遭冤判 法院欺瞒家人</a><br><a href="https://github.com/ukize233/djy/blob/master/gb/20/1/8/n11776343.md#1">大陆留学生香港参加集会 公开声援港人抗争</a><br><a href="https://github.com/ukize233/djy/blob/master/gb/20/1/7/n11775580.md#1">蓬佩奥回应中联办换人 “北京应履行承诺”</a><br><a href="https://github.com/ukize233/djy/blob/master/gb/20/1/5/n11769986.md#1">【2019盘点】中共对法轮功学员残酷迫害</a><br><br><p><a href="https://github.com/ukize233/djy/blob/master/gb/ncid278.md#1">更多......</a></p></td><td VALIGN=TOP width="352"><h2><p><strong>中国经济</strong></p></h2><a href="https://github.com/ukize233/djy/blob/master/gb/20/1/9/n11778820.md#1"><img width="150" align ="left" src="http://i.epochtimes.com/assets/uploads/2019/10/GettyImages-1142701434-150x120.jpg"></a><a href="https://github.com/ukize233/djy/blob/master/gb/20/1/9/n11778820.md#1">对美承诺或成空 传大陆再买10批巴西大豆</a><br>日前有消息称，大陆本周又购买了10批 ...<br><br><a href="https://github.com/ukize233/djy/blob/master/gb/20/1/9/n11778212.md#1">中信计划转让麦当劳中国22%股权</a><br><a href="https://github.com/ukize233/djy/blob/master/gb/20/1/8/n11777957.md#1">年关难过 大陆网络公司新一波裁员潮来临</a><br><a href="https://github.com/ukize233/djy/blob/master/gb/20/1/8/n11777929.md#1">大陆前100房企业绩增速跌80% 至个位数</a><br><a href="https://github.com/ukize233/djy/blob/master/gb/20/1/8/n11777910.md#1">【新闻看点】中美贸谈签字迫近 北京3动作诡异</a><br><a href="https://github.com/ukize233/djy/blob/master/gb/20/1/8/n11777493.md#1">开年A股日日现闪崩  港中资金融股8日普跌</a><br><br><p><a href="https://github.com/ukize233/djy/blob/master/gb/ncid283.md#1">更多......</a></p></td></tr><tr><td VALIGN=TOP width="355"><h2><p><strong>大陆政治</strong></p></h2><a href="https://github.com/ukize233/djy/blob/master/gb/20/1/9/n11778877.md#1"><img width="150" align ="left" src="http://i.epochtimes.com/assets/uploads/2020/01/299548afd8a39ceea8f1a2f93cac8e5f-150x120.jpg"></a><a href="https://github.com/ukize233/djy/blob/master/gb/20/1/9/n11778877.md#1">王立强称遭威胁利诱 澳洲警方：正在调查</a><br>今日国民党副秘书长蔡正元召开记者会 ...<br><br><a href="https://github.com/ukize233/djy/blob/master/gb/20/1/9/n11778455.md#1">河南交通局副局长向司机要钱 视频曝光</a><br><a href="https://github.com/ukize233/djy/blob/master/gb/20/1/8/n11777903.md#1">骆惠宁称揪心 郭文贵：骆绝对心狠手辣</a><br><a href="https://github.com/ukize233/djy/blob/master/gb/20/1/8/n11777760.md#1">川普证实伊朗攻击无美军伤亡</a><br><a href="https://github.com/ukize233/djy/blob/master/gb/20/1/8/n11777568.md#1">王立强遭死亡威胁 被要求撤回对中共指控</a><br><a href="https://github.com/ukize233/djy/blob/master/gb/20/1/8/n11777394.md#1">【直播回放】伊朗袭美基地 川普讲话化干戈</a><br><br><p><a href="https://github.com/ukize233/djy/blob/master/gb/ncid277.md#1">更多......</a></p></td><td VALIGN=TOP width="352"><h2><p><strong>天灾人祸</strong></p></h2><a href="https://github.com/ukize233/djy/blob/master/gb/20/1/9/n11778256.md#1"><img width="150" align ="left" src="http://i.epochtimes.com/assets/uploads/2020/01/GettyImages22-1881582-600x359-1-150x120.jpg"></a><a href="https://github.com/ukize233/djy/blob/master/gb/20/1/9/n11778256.md#1">武汉肺炎为新型冠状病毒 跟此前发现的不同</a><br>1月9日，武汉不明原因的病毒性肺炎疫 ...<br><br><a href="https://github.com/ukize233/djy/blob/master/gb/20/1/9/n11778710.md#1">安徽长丰县重型货车和私家车相撞 致8死</a><br><a href="https://github.com/ukize233/djy/blob/master/gb/20/1/9/n11778417.md#1">新年第9日 北京房山发生3.2级地震</a><br><a href="https://github.com/ukize233/djy/blob/master/gb/20/1/9/n11778306.md#1">西藏暴雪湖南暴雨 大陆多地现雨雪天气</a><br><a href="https://github.com/ukize233/djy/blob/master/gb/20/1/7/n11775361.md#1">港疑似武汉肺炎30宗 区议会促林郑赴汉视察</a><br><a href="https://github.com/ukize233/djy/blob/master/gb/20/1/7/n11775116.md#1">【热点互动】武汉肺炎蔓延 信息封锁如何自保？</a><br><br><p><a href="https://github.com/ukize233/djy/blob/master/gb/ncid280.md#1">更多......</a></p></td></tr><tr><td VALIGN=TOP width="355"><h2><p><strong>社会万象</strong></p></h2><a href="https://github.com/ukize233/djy/blob/master/gb/20/1/8/n11777700.md#1"><img width="150" align ="left" src="http://i.epochtimes.com/assets/uploads/2020/01/GettyImages-594329966-150x120.jpg"></a><a href="https://github.com/ukize233/djy/blob/master/gb/20/1/8/n11777700.md#1">印尼向争议海域派遣战机巡航 北京低调</a><br>在印尼与中国的南海领土争端不断升级 ...<br><br><a href="https://github.com/ukize233/djy/blob/master/gb/20/1/9/n11778497.md#1">汕头怀孕母牛三步一跪求生 网友买下放生</a><br><a href="https://github.com/ukize233/djy/blob/master/gb/20/1/9/n11778525.md#1">每日三退声明精选（2020/01/08）</a><br><a href="https://github.com/ukize233/djy/blob/master/gb/20/1/8/n11778073.md#1">自曝为何生二胎不经老大同意 张歆艺逗乐网友</a><br><a href="https://github.com/ukize233/djy/blob/master/gb/20/1/8/n11777207.md#1">好心的巴黎人 专访法国国际经济专家沃尔特</a><br><a href="https://github.com/ukize233/djy/blob/master/gb/20/1/8/n11777892.md#1">乌航空难?坠机原因和客机安全探析</a><br><br><p><a href="https://github.com/ukize233/djy/blob/master/gb/ncid282.md#1">更多......</a></p></td><td VALIGN=TOP width="352"><h2><p><strong>科教文化</strong></p></h2><a href="https://github.com/ukize233/djy/blob/master/gb/20/1/8/n11777510.md#1"><img width="150" align ="left" src="http://i.epochtimes.com/assets/uploads/2017/03/yangzi_meitu_1-150x120.jpg"></a><a href="https://github.com/ukize233/djy/blob/master/gb/20/1/8/n11777510.md#1">杨紫获大陆年度女演员和女明星商业价值双冠</a><br>1月7日，陆媒“腾讯娱乐白皮书”公布 ...<br><br><a href="https://github.com/ukize233/djy/blob/master/gb/20/1/8/n11777290.md#1">中共为何禁中小学使用境外教材</a><br><a href="https://github.com/ukize233/djy/blob/master/gb/20/1/8/n11775957.md#1">西安高中生将老师杀害潜逃 已被抓获</a><br><a href="https://github.com/ukize233/djy/blob/master/gb/20/1/6/n11773097.md#1">金球奖首位华裔影后 林家珍获喜剧最佳女主角</a><br><a href="https://github.com/ukize233/djy/blob/master/gb/20/1/3/n11766574.md#1">除掉伊朗二号人物 川普：为了止战非宣战</a><br><a href="https://github.com/ukize233/djy/blob/master/gb/20/1/2/n11761587.md#1">红歌代替儿歌 大陆幼童也要表示效忠</a><br><br><p><a href="https://github.com/ukize233/djy/blob/master/gb/ncid281.md#1">更多......</a></p></td></tr><tr><td VALIGN=TOP width="355"><h2><p><strong>网闻禁闻</strong></p></h2><a href="https://github.com/ukize233/djy/blob/master/gb/20/1/3/n11765947.md#1"><img width="150" align ="left" src="http://i.epochtimes.com/assets/uploads/2019/11/GettyImages-1086048850-150x120.jpg"></a><a href="https://github.com/ukize233/djy/blob/master/gb/20/1/3/n11765947.md#1">前高管炮轰谷歌中国项目：重利轻人权</a><br>前谷歌高管罗斯·拉吉尼斯（Ross LaJ ...<br><br><a href="https://github.com/ukize233/djy/blob/master/gb/19/12/31/n11758321.md#1">安全担忧 美陆军紧随海军禁用TikTok</a><br><a href="https://github.com/ukize233/djy/blob/master/gb/19/12/30/n11756102.md#1">中共外交辞令出尽丑 “耿爽模拟器”被下架</a><br><a href="https://github.com/ukize233/djy/blob/master/gb/19/12/24/n11742493.md#1">网文：大陆汽车行业艰难的两大看点</a><br><a href="https://github.com/ukize233/djy/blob/master/gb/19/12/24/n11742305.md#1">网文：央行钱印出来了 借钱的人没了</a><br><a href="https://github.com/ukize233/djy/blob/master/gb/19/12/6/n11706347.md#1">反送中和六四事件 美政府应对措施对比</a><br><br><p><a href="https://github.com/ukize233/djy/blob/master/gb/ncid2420.md#1">更多......</a></p></td><td VALIGN=TOP width="352"><h2><p><strong>群体事件</strong></p></h2><a href="https://github.com/ukize233/djy/blob/master/gb/20/1/5/n11769412.md#1"><img width="150" align ="left" src="http://i.epochtimes.com/assets/uploads/2020/01/e269c8c8ced63b0e542a3e28dbbd17d0-150x120.jpg"></a><a href="https://github.com/ukize233/djy/blob/master/gb/20/1/5/n11769412.md#1">无锡访民联署“给黄钦书记的公开信”</a><br>2019年岁末，无锡市二十多名非法强拆 ...<br><br><a href="https://github.com/ukize233/djy/blob/master/gb/20/1/1/n11760851.md#1">2020全面奔小康？访民：泪奔</a><br><a href="https://github.com/ukize233/djy/blob/master/gb/19/12/26/n11747752.md#1">中科大副校长被指与中共军企合作 曾遭美拒签</a><br><a href="https://github.com/ukize233/djy/blob/master/gb/19/12/26/n11746173.md#1">浙数千学子连续维权三天 抗议学校改名换制</a><br><a href="https://github.com/ukize233/djy/blob/master/gb/19/12/24/n11742110.md#1">发表撑港灭共言论 大陆多名公民遭刑拘</a><br><a href="https://github.com/ukize233/djy/blob/master/gb/19/12/18/n11731023.md#1">粤村民汽油弹攻政府视频曝光 目击者描述现场</a><br><br><p><a href="https://github.com/ukize233/djy/blob/master/gb/ncid279.md#1">更多......</a></p></td></tr>
+<tr><td VALIGN=TOP width="355"><h2><p><strong>中国人权</strong></p></h2><a href="https://github.com/ukize233/djy/blob/master/gb/20/1/9/n11778253.md#1"><img width="150" align ="left" src="http://i.epochtimes.com/assets/uploads/2020/01/c3ed8329bce6a00029803af8c3258562-150x120.jpg"></a><a href="https://github.com/ukize233/djy/blob/master/gb/20/1/9/n11778253.md#1">鲁商被合同诈骗 法院三次秘密判决维权无门</a><br>法律的制定是以公平正义为基础，用来 ...<br><br><a href="https://github.com/ukize233/djy/blob/master/gb/20/1/8/n11778054.md#1">饮水工程强占地 河南五农场联名举报县政府</a><br><a href="https://github.com/ukize233/djy/blob/master/gb/20/1/7/n11774971.md#1">四川八名法轮功学员遭冤判 法院欺瞒家人</a><br><a href="https://github.com/ukize233/djy/blob/master/gb/20/1/8/n11776343.md#1">大陆留学生香港参加集会 公开声援港人抗争</a><br><a href="https://github.com/ukize233/djy/blob/master/gb/20/1/7/n11775580.md#1">蓬佩奥回应中联办换人 “北京应履行承诺”</a><br><a href="https://github.com/ukize233/djy/blob/master/gb/20/1/5/n11769986.md#1">【2019盘点】中共对法轮功学员残酷迫害</a><br><br><p><a href="https://github.com/ukize233/djy/blob/master/gb/ncid278.md#1">更多......</a></p></td><td VALIGN=TOP width="352"><h2><p><strong>中国经济</strong></p></h2><a href="https://github.com/ukize233/djy/blob/master/gb/20/1/9/n11778820.md#1"><img width="150" align ="left" src="http://i.epochtimes.com/assets/uploads/2019/10/GettyImages-1142701434-150x120.jpg"></a><a href="https://github.com/ukize233/djy/blob/master/gb/20/1/9/n11778820.md#1">对美承诺或成空 传大陆再买10批巴西大豆</a><br>日前有消息称，大陆本周又购买了10批 ...<br><br><a href="https://github.com/ukize233/djy/blob/master/gb/20/1/9/n11778212.md#1">中信计划转让麦当劳中国22%股权</a><br><a href="https://github.com/ukize233/djy/blob/master/gb/20/1/8/n11777957.md#1">年关难过 大陆网络公司新一波裁员潮来临</a><br><a href="https://github.com/ukize233/djy/blob/master/gb/20/1/8/n11777929.md#1">大陆前100房企业绩增速跌80% 至个位数</a><br><a href="https://github.com/ukize233/djy/blob/master/gb/20/1/8/n11777910.md#1">【新闻看点】中美贸谈签字迫近 北京3动作诡异</a><br><a href="https://github.com/ukize233/djy/blob/master/gb/20/1/8/n11777493.md#1">开年A股日日现闪崩  港中资金融股8日普跌</a><br><br><p><a href="https://github.com/ukize233/djy/blob/master/gb/ncid283.md#1">更多......</a></p></td></tr><tr><td VALIGN=TOP width="355"><h2><p><strong>大陆政治</strong></p></h2><a href="https://github.com/ukize233/djy/blob/master/gb/20/1/9/n11778877.md#1"><img width="150" align ="left" src="http://i.epochtimes.com/assets/uploads/2020/01/299548afd8a39ceea8f1a2f93cac8e5f-150x120.jpg"></a><a href="https://github.com/ukize233/djy/blob/master/gb/20/1/9/n11778877.md#1">王立强称遭威胁利诱 澳洲警方：正在调查</a><br>今日国民党副秘书长蔡正元召开记者会 ...<br><br><a href="https://github.com/ukize233/djy/blob/master/gb/20/1/9/n11778455.md#1">河南交通局副局长向司机要钱 视频曝光</a><br><a href="https://github.com/ukize233/djy/blob/master/gb/20/1/8/n11777903.md#1">骆惠宁称揪心 郭文贵：骆绝对心狠手辣</a><br><a href="https://github.com/ukize233/djy/blob/master/gb/20/1/8/n11777760.md#1">川普证实伊朗攻击无美军伤亡</a><br><a href="https://github.com/ukize233/djy/blob/master/gb/20/1/8/n11777568.md#1">王立强遭死亡威胁 被要求撤回对中共指控</a><br><a href="https://github.com/ukize233/djy/blob/master/gb/20/1/8/n11777394.md#1">【直播回放】伊朗袭美基地 川普讲话化干戈</a><br><br><p><a href="https://github.com/ukize233/djy/blob/master/gb/ncid277.md#1">更多......</a></p></td><td VALIGN=TOP width="352"><h2><p><strong>天灾人祸</strong></p></h2><a href="https://github.com/ukize233/djy/blob/master/gb/20/1/9/n11779091.md#1"><img width="150" align ="left" src="http://i.epochtimes.com/assets/uploads/2020/01/000_HKG2003122958048-150x120.jpg"></a><a href="https://github.com/ukize233/djy/blob/master/gb/20/1/9/n11779091.md#1">北大医学部教授：武汉肺炎人传人可能性大</a><br>据大陆专家初步判定，武汉的不明原因 ...<br><br><a href="https://github.com/ukize233/djy/blob/master/gb/20/1/9/n11778710.md#1">安徽长丰县重型货车和私家车相撞 致8死</a><br><a href="https://github.com/ukize233/djy/blob/master/gb/20/1/9/n11778417.md#1">新年第9日 北京房山发生3.2级地震</a><br><a href="https://github.com/ukize233/djy/blob/master/gb/20/1/9/n11778306.md#1">西藏暴雪湖南暴雨 大陆多地现雨雪天气</a><br><a href="https://github.com/ukize233/djy/blob/master/gb/20/1/9/n11778256.md#1">武汉肺炎为新型冠状病毒 跟此前发现的不同</a><br><a href="https://github.com/ukize233/djy/blob/master/gb/20/1/7/n11775361.md#1">港疑似武汉肺炎30宗 区议会促林郑赴汉视察</a><br><br><p><a href="https://github.com/ukize233/djy/blob/master/gb/ncid280.md#1">更多......</a></p></td></tr><tr><td VALIGN=TOP width="355"><h2><p><strong>社会万象</strong></p></h2><a href="https://github.com/ukize233/djy/blob/master/gb/20/1/8/n11777700.md#1"><img width="150" align ="left" src="http://i.epochtimes.com/assets/uploads/2020/01/GettyImages-594329966-150x120.jpg"></a><a href="https://github.com/ukize233/djy/blob/master/gb/20/1/8/n11777700.md#1">印尼向争议海域派遣战机巡航 北京低调</a><br>在印尼与中国的南海领土争端不断升级 ...<br><br><a href="https://github.com/ukize233/djy/blob/master/gb/20/1/9/n11778497.md#1">汕头怀孕母牛三步一跪求生 网友买下放生</a><br><a href="https://github.com/ukize233/djy/blob/master/gb/20/1/9/n11778525.md#1">每日三退声明精选（2020/01/08）</a><br><a href="https://github.com/ukize233/djy/blob/master/gb/20/1/8/n11778073.md#1">自曝为何生二胎不经老大同意 张歆艺逗乐网友</a><br><a href="https://github.com/ukize233/djy/blob/master/gb/20/1/8/n11777207.md#1">好心的巴黎人 专访法国国际经济专家沃尔特</a><br><a href="https://github.com/ukize233/djy/blob/master/gb/20/1/8/n11777892.md#1">乌航空难?坠机原因和客机安全探析</a><br><br><p><a href="https://github.com/ukize233/djy/blob/master/gb/ncid282.md#1">更多......</a></p></td><td VALIGN=TOP width="352"><h2><p><strong>科教文化</strong></p></h2><a href="https://github.com/ukize233/djy/blob/master/gb/20/1/8/n11777510.md#1"><img width="150" align ="left" src="http://i.epochtimes.com/assets/uploads/2017/03/yangzi_meitu_1-150x120.jpg"></a><a href="https://github.com/ukize233/djy/blob/master/gb/20/1/8/n11777510.md#1">杨紫获大陆年度女演员和女明星商业价值双冠</a><br>1月7日，陆媒“腾讯娱乐白皮书”公布 ...<br><br><a href="https://github.com/ukize233/djy/blob/master/gb/20/1/8/n11777290.md#1">中共为何禁中小学使用境外教材</a><br><a href="https://github.com/ukize233/djy/blob/master/gb/20/1/8/n11775957.md#1">西安高中生将老师杀害潜逃 已被抓获</a><br><a href="https://github.com/ukize233/djy/blob/master/gb/20/1/6/n11773097.md#1">金球奖首位华裔影后 林家珍获喜剧最佳女主角</a><br><a href="https://github.com/ukize233/djy/blob/master/gb/20/1/3/n11766574.md#1">除掉伊朗二号人物 川普：为了止战非宣战</a><br><a href="https://github.com/ukize233/djy/blob/master/gb/20/1/2/n11761587.md#1">红歌代替儿歌 大陆幼童也要表示效忠</a><br><br><p><a href="https://github.com/ukize233/djy/blob/master/gb/ncid281.md#1">更多......</a></p></td></tr><tr><td VALIGN=TOP width="355"><h2><p><strong>网闻禁闻</strong></p></h2><a href="https://github.com/ukize233/djy/blob/master/gb/20/1/3/n11765947.md#1"><img width="150" align ="left" src="http://i.epochtimes.com/assets/uploads/2019/11/GettyImages-1086048850-150x120.jpg"></a><a href="https://github.com/ukize233/djy/blob/master/gb/20/1/3/n11765947.md#1">前高管炮轰谷歌中国项目：重利轻人权</a><br>前谷歌高管罗斯·拉吉尼斯（Ross LaJ ...<br><br><a href="https://github.com/ukize233/djy/blob/master/gb/19/12/31/n11758321.md#1">安全担忧 美陆军紧随海军禁用TikTok</a><br><a href="https://github.com/ukize233/djy/blob/master/gb/19/12/30/n11756102.md#1">中共外交辞令出尽丑 “耿爽模拟器”被下架</a><br><a href="https://github.com/ukize233/djy/blob/master/gb/19/12/24/n11742493.md#1">网文：大陆汽车行业艰难的两大看点</a><br><a href="https://github.com/ukize233/djy/blob/master/gb/19/12/24/n11742305.md#1">网文：央行钱印出来了 借钱的人没了</a><br><a href="https://github.com/ukize233/djy/blob/master/gb/19/12/6/n11706347.md#1">反送中和六四事件 美政府应对措施对比</a><br><br><p><a href="https://github.com/ukize233/djy/blob/master/gb/ncid2420.md#1">更多......</a></p></td><td VALIGN=TOP width="352"><h2><p><strong>群体事件</strong></p></h2><a href="https://github.com/ukize233/djy/blob/master/gb/20/1/5/n11769412.md#1"><img width="150" align ="left" src="http://i.epochtimes.com/assets/uploads/2020/01/e269c8c8ced63b0e542a3e28dbbd17d0-150x120.jpg"></a><a href="https://github.com/ukize233/djy/blob/master/gb/20/1/5/n11769412.md#1">无锡访民联署“给黄钦书记的公开信”</a><br>2019年岁末，无锡市二十多名非法强拆 ...<br><br><a href="https://github.com/ukize233/djy/blob/master/gb/20/1/1/n11760851.md#1">2020全面奔小康？访民：泪奔</a><br><a href="https://github.com/ukize233/djy/blob/master/gb/19/12/26/n11747752.md#1">中科大副校长被指与中共军企合作 曾遭美拒签</a><br><a href="https://github.com/ukize233/djy/blob/master/gb/19/12/26/n11746173.md#1">浙数千学子连续维权三天 抗议学校改名换制</a><br><a href="https://github.com/ukize233/djy/blob/master/gb/19/12/24/n11742110.md#1">发表撑港灭共言论 大陆多名公民遭刑拘</a><br><a href="https://github.com/ukize233/djy/blob/master/gb/19/12/18/n11731023.md#1">粤村民汽油弹攻政府视频曝光 目击者描述现场</a><br><br><p><a href="https://github.com/ukize233/djy/blob/master/gb/ncid279.md#1">更多......</a></p></td></tr>
 <tr><td VALIGN=TOP width="355"><h2><p><strong>九评共产党</strong></p></h2><a href="https://github.com/ukize233/djy/blob/master/gb/4/11/19/n722529.md#1" target="_blank">【一】评共产党是什么</a><br><a href="https://github.com/ukize233/djy/blob/master/gb/4/11/21/n723946.md#1" target="_blank">【二】评中国共产党是怎样起家的</a><br><a href="https://github.com/ukize233/djy/blob/master/gb/4/11/23/n725597.md#1" target="_blank">【三】评中国共产党的暴政</a><br><a href="https://github.com/ukize233/djy/blob/master/gb/4/11/25/n727814.md#1" target="_blank">【四】评共产党是反宇宙的力量</a><br><a href="https://github.com/ukize233/djy/blob/master/gb/4/11/27/n730058.md#1" target="_blank">【五】评江泽民与中共相互利用迫害法轮功</a><br><a href="https://github.com/ukize233/djy/blob/master/gb/4/11/29/n731667.md#1" target="_blank">【六】评中国共产党破坏民族文化</a><br><a href="https://github.com/ukize233/djy/blob/master/gb/4/12/1/n733806.md#1" target="_blank">【七】评中国共产党的杀人历史</a><br><a href="https://github.com/ukize233/djy/blob/master/gb/4/12/3/n735942.md#1" target="_blank">【八】评中国共产党的邪教本质</a><br><a href="https://github.com/ukize233/djy/blob/master/gb/4/12/4/n737542.md#1" target="_blank">【九】评中国共产党的流氓本性</a></td><td VALIGN=TOP width="352"><h2><p><strong>三退大潮</strong></p></h2><strong>退出中共党、团、队总人数:
 
 ```diff
-- 共 349,574,037 人
+- 共 349,583,884 人
 ```
 </strong>
 <a href="https://github.com/ukize233/djy/blob/master/gb/19/12/30/n11754554.md#1">新元赋——退党中心2020新年寄语</a><br>
