--- a/gb/news2008.md
+++ b/gb/news2008.md
@@ -5,7 +5,7 @@
 <tr><td><h3><a href="https://github.com/fcjmkl2375/djy/blob/master/gb/20/1/10/n11781628.md#1" target="_blank">车评：超越53MPG 2020 Toyota Corolla Hybrid LE</a><br></h3><a href="https://github.com/fcjmkl2375/djy/blob/master/gb/20/1/10/n11781628.md#1" target="_blank"><img width="150" src="http://i.epochtimes.com/assets/uploads/2020/01/2020_Toyota_Corolla_Hybrid_03-150x120.jpg" align ="left"></a>Toyota的长青车系Corolla，已迈进第十二代，去年已率先测试了被Toyota称为“Haute Hatch”的Hatchback揭背版本，动力不错又有动感外形，与Mazda3 Hatchback及Honda Civic Hatchback成为最受欢迎的三款日系Hatchback，其实还有Subaru Imprez.........<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2020年01月10日 1:31 PM			</td></tr>
 <tr><td><h3><a href="https://github.com/fcjmkl2375/djy/blob/master/gb/20/1/9/n11780612.md#1" target="_blank">【胡乃文开讲】台湾大选结果开心愤怒都伤身 拍打2处平静情绪</a><br></h3><a href="https://github.com/fcjmkl2375/djy/blob/master/gb/20/1/9/n11780612.md#1" target="_blank"><img width="150" src="http://i.epochtimes.com/assets/uploads/2020/01/daxuan33-200109-150x120.jpg" align ="left"></a>台湾选举季节到了 ，你是否每天盯着电视政论节目，整个人变得亢奋、紧张??小心！选举症候群已经上身。最近有报导说 ，选举前一个月，选举症候群求诊人数就增加两成 。敲打经络有助于平静心情。如果你与别人有不同意见时，火气一下就上来；或者你支持的候选人没选上，心中产生气恨的话，容易出现肝胆的问题。我们可以拍打胆经。......<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2020年01月10日 7:58 AM			</td></tr>
 <tr><td><h3><a href="https://github.com/fcjmkl2375/djy/blob/master/gb/20/1/6/n11771200.md#1" target="_blank">墨尔本父亲圣诞礼物独具创意 网友艳羡</a><br></h3><a href="https://github.com/fcjmkl2375/djy/blob/master/gb/20/1/6/n11771200.md#1" target="_blank"><img width="150" src="http://i.epochtimes.com/assets/uploads/2020/01/cubby-150x120.jpg" align ="left"></a>墨尔本一位极富创意的父亲用一双巧手，把从Kmart购买的仅199澳元的玩具小屋，改造成了一栋精致而华丽的房屋模型，送给孩子作为圣诞礼物。此举获得了数以千计的网友点赞。......<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2020年01月10日 4:15 AM			</td></tr>
-<tr><td><h3><a href="https://github.com/fcjmkl2375/djy/blob/master/gb/20/1/9/n11780344.md#1" target="_blank">哈佛医师：常备四种食材 煮出“抗癌蔬菜汤”</a><br></h3><a href="https://github.com/fcjmkl2375/djy/blob/master/gb/20/1/9/n11780344.md#1" target="_blank"><img width="150" src="http://i.epochtimes.com/assets/uploads/2020/01/vegetable-soup_450659374-150x120.jpg" align ="left"></a>蔬果中丰富的植化素，具有强化免疫力、抑制癌症等功效。人体不能自行合成植化素，只能从食物中摄取。因此每天喝蔬菜汤，是很好的养生法。专攻免疫力、抗癌研究的哈佛医师高桥弘，综合长期以来的研究成果，建议运用高丽菜等四种常见食材煮“抗癌蔬菜汤”。早餐前喝一碗，养出不易被癌细胞侵袭的抗病体质。......<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2020年01月10日 3:52 AM			</td></tr>
+<tr><td><h3><a href="https://github.com/fcjmkl2375/djy/blob/master/gb/20/1/9/n11780344.md#1" target="_blank">哈佛医师：常备4种食材 煮出“抗癌蔬菜汤”</a><br></h3><a href="https://github.com/fcjmkl2375/djy/blob/master/gb/20/1/9/n11780344.md#1" target="_blank"><img width="150" src="http://i.epochtimes.com/assets/uploads/2020/01/vegetable-soup_450659374-150x120.jpg" align ="left"></a>蔬果中丰富的植化素，具有强化免疫力、抑制癌症等功效。人体不能自行合成植化素，只能从食物中摄取。因此每天喝蔬菜汤，是很好的养生法。专攻免疫力、抗癌研究的哈佛医师高桥弘，综合长期以来的研究成果，建议运用高丽菜等四种常见食材煮“抗癌蔬菜汤”。早餐前喝一碗，养出不易被癌细胞侵袭的抗病体质。......<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2020年01月10日 3:52 AM			</td></tr>
 <tr><td><h3><a href="https://github.com/fcjmkl2375/djy/blob/master/gb/20/1/8/n11777154.md#1" target="_blank">折耳猫黑煤球配上亮眼异色瞳 萌翻网友</a><br></h3><a href="https://github.com/fcjmkl2375/djy/blob/master/gb/20/1/8/n11777154.md#1" target="_blank"><img width="150" src="http://i.epochtimes.com/assets/uploads/2020/01/c01ab01d5c39f799ea89e5ee6d2d8873-150x120.jpg" align ="left"></a>黑猫会让人嫌弃说它不吉利吗？不过，这只住在中国名叫牛奶（Milk）的黑猫可是一只网红的幸福猫咪呢？这只全身一片黑的折耳猫，拥有一对奇异的眼睛-被称异色曈，整张脸只看见一对超萌的大眼睛，吸引人着很多网友直呼好可爱！......<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2020年01月09日 9:54 PM			</td></tr>
 <tr><td><h3><a href="https://github.com/fcjmkl2375/djy/blob/master/gb/20/1/8/n11777187.md#1" target="_blank">小人国住里面吗？插座内藏秘密 微缩世界超疗愈</a><br></h3><a href="https://github.com/fcjmkl2375/djy/blob/master/gb/20/1/8/n11777187.md#1" target="_blank"><img width="150" src="http://i.epochtimes.com/assets/uploads/2020/01/eee9cf2a26a00b406958327ad1bb5aec-150x120.jpg" align ="left"></a>日本一位微缩创作家MOZU，擅长于制作逼真的微缩模型，常常在网路上分享他的微缩作品。那些超级可爱又精致作品，让人沉浸在充满梦幻、生动有趣的小小世界。......<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2020年01月09日 9:45 PM			</td></tr>
 <tr><td><h3><a href="https://github.com/fcjmkl2375/djy/blob/master/gb/20/1/7/n11775213.md#1" target="_blank">汉方让你摆脱打鼾烦恼 （续）</a><br></h3><a href="https://github.com/fcjmkl2375/djy/blob/master/gb/20/1/7/n11775213.md#1" target="_blank"><img width="150" src="http://i.epochtimes.com/assets/uploads/2020/01/1407142316232483-600x400-150x120.jpg" align ="left"></a>值得推荐的是：“六味地黄丸”，这款药方对治疗鼾症患者，有一定的疗效，“六味地黄丸”有补肾、润肺、理气的功效。“肾”主纳气，“肺”主呼气，所以可治疗通道不利，气机不畅所引起的“鼾症”。另外，由于肥胖者多痰气虚，容易导致“鼾症”而并发“睡眠呼吸中止症”，这类型患者宜用“参苓白术散”宣肺利气、燥湿化痰。这款药方对“阻塞性睡眠.........<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2020年01月09日 3:22 PM			</td></tr>
